--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
             android:theme="@style/Theme.FoodE.NoActionBar" />
 
         <activity
+            android:name=".ui.DetailActivity"
+            android:exported="false"
+            android:theme="@style/Theme.FoodE.NoActionBar" />
+
+        <activity
             android:name=".ui.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.FoodE.NoActionBar">
